# codetoprompt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  cli.py  core.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
codetoprompt/: __init__.py  analysis.py  arg_parser.py  cli.py  compressor.py  config.py  core.py  interactive.py  remote.py  snapshot.py  utils.py  version.py
codetoprompt/compressor/: __init__.py  compressor.py
codetoprompt/compressor/analysers/: __init__.py  base.py  cpp.py  factory.py  java.py  javascript.py  python.py  rust.py
codetoprompt/compressor/formatters/: __init__.py  base.py  cpp.py  factory.py  java.py  javascript.py  python.py  rust.py  utils.py
tests/: __init__.py  test_cli.py  test_core.py
