[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codetoprompt"
version = "0.2.2"
description = "Convert your codebase into a single LLM prompt"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Yash Bhaskar", email = "yash9439@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "pygit2>=1.12.0",
    "tiktoken>=0.5.0",
    "pyperclip>=1.8.2",
    "jinja2>=3.1.0",
    "pathspec>=0.11.0",
    "rich>=13.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yash9439/codetoprompt"
Documentation = "https://github.com/yash9439/codetoprompt#readme"
Repository = "https://github.com/yash9439/codetoprompt"
Issues = "https://github.com/yash9439/codetoprompt/issues"

[project.scripts]
codetoprompt = "codetoprompt.cli:main"

[tool.setuptools]
packages = ["codetoprompt"] 